# wlinspector

./: readme.md
daemon/: Cargo.toml
daemon/client/: Cargo.toml  build.rs
daemon/client/include/: wlinspectorclient.h
daemon/client/src/: ffi.rs  lib.rs  main.rs
daemon/common/: Cargo.toml
daemon/common/src/: lib.rs
daemon/server/: Cargo.toml
daemon/server/src/: background.rs  main.rs  state.rs
proxy/: meson.build
proxy/src/: argparser.hpp  common.hpp  dbus.hpp  main.cpp
