[package]
name = "wlinspectordaemon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.94"
dbus = "0.9.7"
dbus-crossroads = "0.5.2"
env_logger = { version = "0.11.5", default-features = false, features = ["humantime", "auto-color"] }
log = "0.4.22"
serde = { version = "1.0.216" }
serde_json = "1.0.133"
sysinfo = { version = "0.33.0", default-features = false, features = ["system"] }
wlinspector_common = { path = "../common" }
